# VTIL-Core

./: .gitignore  CMakeLists.txt
Dependencies/: CMakeLists.txt
Dependencies/capstone/: CMakeLists.txt
Dependencies/capstone/src/: capstone.cpp
Dependencies/keystone/: CMakeLists.txt
Dependencies/keystone/src/: keystone.cpp
VTIL/: CMakeLists.txt
VTIL-Architecture/arch/: register_desc.hpp
VTIL-Architecture/routine/: serialization.hpp
VTIL-Architecture/symex/: variable.cpp
VTIL-Common/: CMakeLists.txt
VTIL-Common/io/: formatting.hpp  logger.cpp  logger.hpp
VTIL-Common/math/: operators.hpp
