project(capstone)

file(GLOB_RECURSE PRIVATE_SOURCES CONFIGURE_DEPENDS
	${PROJECT_SOURCE_DIR}/src/*.cpp
	${PROJECT_SOURCE_DIR}/src/*.hpp)

file(GLOB_RECURSE PUBLIC_HEADERS CONFIGURE_DEPENDS
	${PROJECT_SOURCE_DIR}/include/*.h)

add_library(${PROJECT_NAME} ${PRIVATE_SOURCES} ${PUBLIC_HEADERS})
target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/include)
